# SoundTrack

./: .gitignore  CMakeLists.txt  README.md
Demos/: Beethoven5.json  KathalEnum.json
Source/Application/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Engines/: Analyzer.cpp  Analyzer.h  Arrangement.cpp  Arrangement.h  DataStructures.h  Harmony.cpp  Harmony.h  InstrumentEngine.h  LearningOrchestrator.cpp  LearningOrchestrator.h  Rhythm.cpp  Rhythm.h  Theory.cpp  Theory.h
Source/UI/Views/Composition/: CompositionView.cpp  CompositionView.h
Source/UI/Views/Import/: ImportView.cpp  ImportView.h
Source/UI/Views/Instrument/: InstrumentView.cpp  InstrumentView.h  MusiccaKeyboardComponent.cpp  MusiccaKeyboardComponent.h
Source/UI/Views/Mastery/: MasteryView.cpp  MasteryView.h
